dev-k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: server-api
    template:
        metadata:
            labels:
                component: server-api
        spec:
            containers:
                - name: csharpstarterapi
                  image: avaneesa/csharpstarterapi
                  ports:
                    - containerPort: 80
