dev-k8s/server-cluster-ip-serve.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-api-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: server-api
    ports:
      - port: 80
        targetPort: 80
